<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.SignInByEmailActivity">

  <TextView
    android:id="@+id/sign_in_by_email_app_name"
    style="@style/TextAppearance.MaterialComponents.Headline2"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/app_name"
    app:layout_constraintBottom_toTopOf="@id/sign_in_by_email_email_layout"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/sign_in_by_email_email_layout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/spacing_24"
    android:layout_marginEnd="@dimen/spacing_24"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.618">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/sign_in_by_email_email_edittext"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/email"/>
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/sign_in_by_email_password_layout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/spacing_24"
    android:layout_marginEnd="@dimen/spacing_24"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/sign_in_by_email_email_layout">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/sign_in_by_email_password_edittext"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/password"/>
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/sign_in_by_email_sign_up_button"
    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/spacing_8"
    android:layout_marginStart="@dimen/spacing_8"
    android:layout_marginEnd="@dimen/spacing_8"
    android:padding="@dimen/spacing_16"
    android:text="@string/sign_up"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@id/sign_in_by_email_sign_in_button"
    app:layout_constraintStart_toStartOf="parent"/>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/sign_in_by_email_sign_in_button"
    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/spacing_8"
    android:layout_marginStart="@dimen/spacing_8"
    android:layout_marginEnd="@dimen/spacing_8"
    android:padding="@dimen/spacing_16"
    android:text="@string/sign_in"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/sign_in_by_email_sign_up_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>